# zero2prod

./: Cargo.toml  configuration.yaml
configuration/: base.yaml
migrations/: 20250301030723_create_subscriptions_table.sql
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
