[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["archyuan"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.0"
actix-tls = { version = "1.0", features = ["rustls"] }
actix-http = "3.0.0"
actix-rt = "=2.6.0"
reqwest = "0.12.12"
tokio = "1.43.0"
serde = {version = "1", features = ["derive"]}
sqlx ={ version = "0.7",default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
config = "0.13"
uuid = {version = "1", features = ["v4"]}
chrono = {version = "0.4.22", default-features = false, features = ["clock"]}
env_logger = "0.9"
log = "0.4"
tracing = {version = "0.1", features = ["log"]}